[package]
name = "akafugu_twidisplay"
version = "0.1.1"
authors = ["Michal Lasak <nebelgrau77@gmail.com>"]
edition = "2018"
description = "A platform agnostic Rust driver for the Akafugu TWIDisplay."
documentation = "https://docs.rs/pcf8563"
readme = "README.md"
homepage = "https://www.akafugu.jp/posts/products/twidisplay/"
repository = "https://www.akafugu.jp/posts/products/twidisplay/"
license = "MIT OR Apache-2.0"
keywords = ["akafugu", "twidisplay", "lcd", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

include = [
    "**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
embedded-hal-mock = "0.2"

[profile.release]
lto = true
